--- a/public/tpl/BookView.html
+++ b/public/tpl/BookView.html
@@ -4,7 +4,7 @@
 
         <fieldset>
 
-            <legend>Wine Details</legend>
+            <legend>Book Details</legend>
             <br/>
 
             <div class="row">
